# Pokemon-style-rpg

./: CMakeLists.txt  run.bat
include/glad/: glad.h
src/: glad.c  main.cpp
src/core/: application.cpp  application.h
src/handler/: object-handler.h  window_handler.cpp  window_handler.h
src/object/: mesh.cpp  mesh.h
src/renderer/: .gitignore  EBO.cpp  EBO.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h  renderer.cpp  renderer.h  shader.cpp  shader.h
src/shader/: default.frag  default.vert  default1.frag  default1.vert
src/util/: structs.h  transform.h
